--- a/.github/workflows/build-llamacpp-rocm.yml
+++ b/.github/workflows/build-llamacpp-rocm.yml
@@ -3,13 +3,13 @@ on:
   workflow_dispatch:
     inputs:
       operating_systems:
-        description: 'Operating systems to build for (comma-separated: windows,ubuntu)'
+        description: 'Operating systems to build for (comma-separated: windows)'
         required: false
-        default: 'windows,ubuntu'
+        default: 'windows'
       gfx_target:
         description: 'AMD GPU targets (comma-separated)'
         required: false
-        default: 'gfx1151,gfx120X,gfx110X'
+        default: 'gfx120X'
       rocm_version:
         description: 'ROCm version to use (e.g., 7.0.0rc20250722) or "latest" to auto-detect'
         required: false
